# hogisim

./: .gitignore  LICENSE  README.md  cabal.project  hie.yaml  hogisim.cabal  hogism.cabal  stack.yaml
doc/arch/: frontend.md
doc/examples/: 2bit_full_adder.hgs  3to8_decoder.hgs  4to1_mux.hgs
doc/notes/: backend-design.txt  nov_12_meeting.md  nov_5_meeting.md
src/: Bool.hs  Control.hs  Main.hs  Model.hs  Sim.hs  Types.hs  View.hs  circuit.hs
src/Model/: Cell.hs  Circuit.hs
tests/: Test.hs  TestSim.hs
