name:                hogism
version:             0.0.0.0
license:             MIT
license-file:        LICENSE
author:              Christopher Priebe
maintainer:          cpriebe@ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hogism
  main-is:             Main.hs
  build-depends:       base >=4.9,
                       vector,
                       matrix,
                       vty,
                       brick,
                       Yampa,
                       algebraic-graphs,
                       containers,
                       unordered-containers


  hs-source-dirs:      src
  other-modules:       Control,
                       Model,
                       Types,
                       View,
                       Model.Cell
                       Model.Circuit

  default-language:    Haskell2010
  ghc-options:       -W -threaded
  extensions:         RankNTypes,
                      Arrows
test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -threaded
  main-is:           Test.hs
  build-depends:     base >=4.9, process